After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 738479 - [PATCH] fix some child interface IP configuration issues
[PATCH] fix some child interface IP configuration issues
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: IP and DNS config
unspecified
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-10-13 20:27 UTC by Dan Williams
Modified: 2014-11-07 15:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-core-remove-child-devices-without-deconfiguring-them.patch (5.23 KB, patch)
2014-10-13 20:30 UTC, Dan Williams
none Details | Review
0002-core-ensure-interface-is-up-before-applying-IP-confi.patch (3.67 KB, patch)
2014-10-13 20:30 UTC, Dan Williams
none Details | Review

Description Dan Williams 2014-10-13 20:27:19 UTC
These patches fix an issue with IP configuration of child interfaces.
Comment 1 Dan Williams 2014-10-13 20:30:13 UTC
Created attachment 288417 [details] [review]
0001-core-remove-child-devices-without-deconfiguring-them.patch
Comment 2 Dan Williams 2014-10-13 20:30:30 UTC
Created attachment 288419 [details] [review]
0002-core-ensure-interface-is-up-before-applying-IP-confi.patch
Comment 3 Thomas Haller 2014-10-14 07:47:38 UTC
both patches look good to me
Comment 4 Dan Williams 2014-10-17 20:49:39 UTC
Merged to master and 0.9.10